# quirky_binder_capnp_client

./: Cargo.toml  justfile
scripts/: coverage.sh
src/: main.rs
